Fix order button & sales jump-out

--- a/css_/style.css
+++ b/css_/style.css
@@ -5315,6 +5315,14 @@ hr {
   .input_wrapper_komentar {
     width: 95%;
   }
+  .button-contact {
+    margin: 0;
+    padding: 0;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
   .contactButton {
     margin: 0;
   }
@@ -5329,6 +5337,17 @@ hr {
     width: 100%;
     font-size: 20px;
     padding: 20px 0 200px;
+  }
+  .sales {
+    width: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .sales-l,
+  .sales-r {
+    float: none;
+    width: 100%;
   }
 }
 
